Css not showing and need to fix password regex, fix php echo to same page

--- a/bugme2.css
+++ b/bugme2.css
@@ -1,9 +1,8 @@
-/*header{
-
-    background-color: plum;
+head{
+    color: plum;
 }
-*/
-input[type=text], select {
+
+input[type=text],input[type=email], input[type=password]  {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -13,8 +12,12 @@ input[type=text], select {
     box-sizing: border-box;
   }
 
-  div {
+  .adduse{
     border-radius: 5px;
-    background-color: #f2f2f2;
+    background-color: #793131;
     padding: 20px;
+  }
+
+  h2{
+    color: antiquewhite;
   }
